# financial-dashboard

./: Cargo.toml  README.md  generate_journal.sh  testing.journal
src/: main.rs  types.rs
