[package]
edition = "2021"
name = "finance-dash"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
piechart = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
textplots = "0.8"
xshell = "0.1"

[profile.release]
incremental = true
